--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,3 +57,9 @@
     margin-bottom: 3rem;
     
 }
+@media screen and (max-width: 900px) {
+    .add-trip{
+        text-align: center;
+        margin: 0;
+    }
+}
