--- a/templates/main/_trips_tbody.html.twig
+++ b/templates/main/_trips_tbody.html.twig
@@ -6,7 +6,7 @@
         <td>{{ trip.participants|length }}/{{ trip.numMaxRegistration }}</td>
         <td>{{ trip.state.label }}</td>
         <td>
-            {% if trip.organiser in trip.participants %}
+            {% if app.user in trip.participants %}
                 X
             {% endif %}
         </td>
