--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -27,12 +27,13 @@
                     <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
                     <div class="checkbox mb-3">
                         <input type="checkbox" name="_remember_me" id="_remember_me">
-                        <label for="_remember_me">Remember me</label>
+                        <label for="_remember_me">Se souvenir de moi</label>
                     </div>
                     <input type="hidden" name="_csrf_token"
                         value="{{ csrf_token('authenticate') }}"
                     >
                     <input type="hidden" name="_target_path" value="{{ path('app_main_index') }}">
+                    <a href="{{path('app_forgot_password_request')}}">Mot de passe oublié</a>
                     <div class="button">
                         <button class="btn btn-lg btn-primary" type="submit">
                         Sign in
