--- a/templates/fragments/_nav.html.twig
+++ b/templates/fragments/_nav.html.twig
@@ -26,6 +26,11 @@
                 <li class="nav-item">
                 <a class="nav-link {% if "post" in app.request.get("_route") %} active {% endif %}" href="{{path('app_main_index')}}"><i class="bi bi-megaphone"></i> Accueil</a>
                 </li>
+                {% if is_granted ('IS_AUTHENTICATED_FULLY') %}
+                {% if "ROLE_ADMIN" in app.user.roles %}
+                    <a class="nav-link" href="{{path('app_profile_index')}}"><i class="bi bi-person"></i>Gérer les utilisateurs</a>
+                {% endif %}
+                {% endif %}
 
               {% if is_granted ('IS_AUTHENTICATED_FULLY') %}    
                 <li class="nav-item">
