--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -46,11 +46,17 @@
                         <td>{{ profile.isAdmin ? 'Oui' : 'Non' }}</td>
                         <td>{{ profile.isActive ? 'Oui' : 'Non' }}</td>
                         <td>
-                            <a class="btn btn-outline-secondary" href="{{ path('app_profile_show', {'id': profile.id}) }}"><i class="bi bi-eye"></i></a>
-                            <a class="btn btn-outline-warning" href="{{ path('app_profile_edit', {'id': profile.id}) }}"><i class="bi bi-pencil"></i></a>
-                            <a class="btn btn-outline-danger" href="{{ path('app_profile_delete', {'id': profile.id}) }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
-  <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
-</svg></a>
+                            <div class="container-fluid">
+                                <div class="d-flex">
+                                <a class="btn btn-outline-secondary me-2" href="{{ path('app_profile_show', {'id': profile.id}) }}"><i class="bi bi-eye"></i></a>
+                                <a class="btn btn-outline-warning me-2" href="{{ path('app_profile_edit', {'id': profile.id}) }}"><i class="bi bi-pencil"></i></a>
+                                {{ include('profile/_delete_form.html.twig') }}
+                                </div>
+                            </div>
+
+{#                            <a class="btn btn-outline-danger" href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">#}
+{#  <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>#}
+{#</svg></a>#}
                         </td>
                     </tr>
 
@@ -63,8 +69,6 @@
     </div>
  </div>
 
-
-    <a class="btn btn-primary" href="{{ path('app_profile_new') }}">Créer participant</a>
     {% block javascripts %}
             <script src="{{asset('js/deactivate-participant.js')}}"></script>
         {% endblock %}
