--- a/templates/fragments/_nav.html.twig
+++ b/templates/fragments/_nav.html.twig
@@ -19,7 +19,7 @@
                 <a class="nav-link {% if "user" in app.request.get("_route") %} active {% endif %}" href="#"><i class="bi bi-person"></i> Villes</a>
                 </li>
                 <li class="nav-item ">
-                <a class="nav-link {% if "user" in app.request.get("_route") %} active {% endif %}" href="#"><i class="bi bi-person"></i> Sites</a>
+                <a class="nav-link {% if "user" in app.request.get("_route") %} active {% endif %}" href="{{path('app_location_index')}}"><i class="bi bi-person"></i> Sites</a>
                 </li>
               {% endif %}
              {% endif %}      
