adding search bar to participant and location

--- a/templates/fragments/_nav.html.twig
+++ b/templates/fragments/_nav.html.twig
@@ -16,25 +16,25 @@
             {% if is_granted ('IS_AUTHENTICATED_FULLY') %}   
              {% if "ROLE_ADMIN" in app.user.roles %}
                 <li class="nav-item ">
-                <a class="nav-link {% if "user" in app.request.get("_route") %} active {% endif %}" href="#"><i class="bi bi-person"></i> Villes</a>
+                <a class="nav-link"  href="#"><i class="bi bi-person"></i> Villes</a>
                 </li>
                 <li class="nav-item ">
-                <a class="nav-link {% if "user" in app.request.get("_route") %} active {% endif %}" href="{{path('app_location_index')}}"><i class="bi bi-person"></i> Sites</a>
+                <a class="nav-link {% if app.request.pathinfo is same as (path('app_location_index')) %} active {% endif %}" href="{{path('app_location_index')}}"><i class="bi bi-person"></i> Sites</a>
+                </li>
+                 <li class="nav-item ">
+                <a class="nav-link {% if app.request.pathinfo is same as (path('app_profile_index')) %} active {% endif %}" href="{{path('app_profile_index')}}"><i class="bi bi-person"></i> Utilisateurs</a>
+                </li>
+                 <li class="nav-item ">
+                <a class="nav-link {% if app.request.pathinfo is same as (path('app_trip_index')) %} active {% endif %}" href="{{path('app_trip_index')}}"><i class="bi bi-person"></i> Sorties</a>
                 </li>
               {% endif %}
              {% endif %}      
                 <li class="nav-item">
-                <a class="nav-link {% if "post" in app.request.get("_route") %} active {% endif %}" href="{{path('app_main_index')}}"><i class="bi bi-megaphone"></i> Accueil</a>
+                <a class="nav-link {% if app.request.pathinfo is same as (path('app_main_index')) %} active {% endif %}" href="{{path('app_main_index')}}"><i class="bi bi-megaphone"></i> Accueil</a>
                 </li>
-                {% if is_granted ('IS_AUTHENTICATED_FULLY') %}
-                {% if "ROLE_ADMIN" in app.user.roles %}
-                    <a class="nav-link" href="{{path('app_profile_index')}}"><i class="bi bi-person"></i>Gérer les utilisateurs</a>
-                {% endif %}
-                {% endif %}
-
               {% if is_granted ('IS_AUTHENTICATED_FULLY') %}    
                 <li class="nav-item">
-                <a class="nav-link {% if "tag" in app.request.get("_route") %} active {% endif %}" href="{{path('app_profile_show',{'id': app.user.id} )}}"><i class="bi bi-list-check"></i> Mon Profil</a>
+                <a class="nav-link {% if app.request.pathinfo is same as (path('app_profile_show',{'id': app.user.id})) %} active {% endif %}" href="{{path('app_profile_show',{'id': app.user.id} )}}"><i class="bi bi-list-check"></i> Mon Profil</a>
                 </li>
                 {% endif %}
                 </li>
