--- a/templates/location/index.html.twig
+++ b/templates/location/index.html.twig
@@ -11,6 +11,14 @@
         <h1 class="display-5">Liste de Lieux</h1>
     </div>
 
+    <!-- Search Form -->
+    <form method="GET" action="{{ path('app_location_index') }}" class="mb-4">
+        <div class="input-group">
+            <input type="text" name="q" class="form-control" placeholder="Rechercher un lieu..." value="{{ app.request.get('q') }}">
+            <button class="btn btn-outline-secondary" type="submit">Rechercher</button>
+        </div>
+    </form>
+
     <div class="table-responsive">
         <table class="table table-hover table-bordered">
             <thead class="table-dark">
@@ -34,8 +42,15 @@
                         <td>{{ location.streetNumber }}</td>
                         <td>{{ location.streetName }}</td>
                         <td>
-                            <a href="{{ path('app_location_show', {'id': location.id}) }}" class="btn btn-sm btn-outline-info"><i class="bi bi-eye"></i></a>
-                            <a href="{{ path('app_location_edit', {'id': location.id}) }}" class="btn btn-sm btn-outline-warning"><i class="bi bi-pencil"></i></a>
+                            <div class="d-flex justify-content-around flex-wrap">
+                                <a href="{{ path('app_location_show', {'id': location.id}) }}" class="btn btn-outline-info m-1">
+                                    <i class="bi bi-eye"></i>
+                                </a>
+                                <a href="{{ path('app_location_edit', {'id': location.id}) }}" class="btn btn-outline-warning m-1">
+                                    <i class="bi bi-pencil"></i>
+                                </a>
+                                {{ include('location/_delete_form.html.twig') }}
+                            </div>
                         </td>
                     </tr>
                 {% else %}
@@ -51,4 +66,5 @@
         <a href="{{ path('app_location_new') }}" class="btn btn-primary">Ajouter un lieu</a>
     </div>
 </div>
+
 {% endblock %}
