--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -9,65 +9,72 @@
 
     <div class="text-center m-1">
         <div class="d-flex justify-content-center align-items-end mb-3">
-            <a class="btn btn-primary ms-2" href="{{ path('app_profile_new') }}">Créer participant</a>
+            <a class="btn btn-primary ms-2 d-inline-flex align-items-center" href="{{ path('app_profile_new') }}">
+                <i class="bi bi-plus-lg me-2"></i> Ajouter
+            </a>
             {% include "profile/_upload_form.html.twig" %}
         </div>
     </div>
 
- <div class="row m-1 text-center justify-content-center">
-    <h1>Gérer les participants</h1>
-    <div class="col-8">
-            <table class="table table-hover">
-                <thead>
+ <div class="container my-4">
+    <div class="text-center mb-4">
+        <h1 class="display-5">Gérer les Participants</h1>
+    </div>
+
+    <!-- Search Form -->
+    <form method="GET" action="{{ path('app_profile_index') }}" class="mb-4">
+        <div class="input-group">
+            <input type="text" name="q" class="form-control" placeholder="Rechercher un participant..." value="{{ app.request.get('q') }}">
+            <button class="btn btn-outline-secondary" type="submit">Rechercher</button>
+        </div>
+    </form>
+
+    <!-- Participant Table -->
+    <div class="table-responsive">
+        <table class="table table-hover table-bordered">
+            <thead class="table-dark">
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">ID</th>
                     <th scope="col">Prénom</th>
                     <th scope="col">Nom de famille</th>
                     <th scope="col">Email</th>
-        {#            <th scope="col">Mot de passe</th>#}
-                    <th scope="col">Numéro de téléphone</th>
+                    <th scope="col">Téléphone</th>
                     <th scope="col">Admin</th>
                     <th scope="col">Actif</th>
                     <th scope="col">Actions</th>
                 </tr>
-                </thead>
-                <tbody>
+            </thead>
+            <tbody>
                 {% for profile in profiles %}
-
                     <tr class="table-primary">
                         <td><input type="checkbox" name="participants[]" value="{{ profile.id }}"></td>
                         <td>{{ profile.id }}</td>
                         <td>{{ profile.firstname }}</td>
                         <td>{{ profile.lastname }}</td>
                         <td>{{ profile.mail }}</td>
-        {#                <td>{{ profile.password }}</td>#}
                         <td>{{ profile.phoneNumber }}</td>
                         <td>{{ profile.isAdmin ? 'Oui' : 'Non' }}</td>
                         <td>{{ profile.isActive ? 'Oui' : 'Non' }}</td>
                         <td>
-                            <div class="container-fluid">
-                                <div class="d-flex">
-                                <a class="btn btn-outline-secondary me-2" href="{{ path('app_profile_show', {'id': profile.id}) }}"><i class="bi bi-eye"></i></a>
-                                <a class="btn btn-outline-warning me-2" href="{{ path('app_profile_edit', {'id': profile.id}) }}"><i class="bi bi-pencil"></i></a>
+                            <div class="d-flex justify-content-center">
+                                <a class="btn btn-outline-primary me-2" href="{{ path('app_profile_show', {'id': profile.id}) }}">
+                                    <i class="bi bi-eye"></i>
+                                </a>
+                                <a class="btn btn-outline-warning me-2" href="{{ path('app_profile_edit', {'id': profile.id}) }}">
+                                    <i class="bi bi-pencil"></i>
+                                </a>
                                 {{ include('profile/_delete_form.html.twig') }}
-                                </div>
                             </div>
-
-{#                            <a class="btn btn-outline-danger" href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">#}
-{#  <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>#}
-{#</svg></a>#}
                         </td>
                     </tr>
-
                 {% endfor %}
-                
-                </tbody>
-            </table>
-            <a class="btn btn-outline-danger" id="deactivate-button">Désactiver</a>
-            <input type="hidden" name="_token" value="{{ csrf_token('deactivate_participants') }}">
+            </tbody>
+        </table>
     </div>
- </div>
+</div>
+
+
 
     {% block javascripts %}
             <script src="{{asset('js/deactivate-participant.js')}}"></script>
