--- a/templates/trip/index.html.twig
+++ b/templates/trip/index.html.twig
@@ -4,49 +4,70 @@
 
 {% block body %}
  {% include "fragments/_nav.html.twig" %}
-<div class="row justify-content-center my-4">
-    <div class="col-8">
-            <h1 class='text-center'>Listes des sorties</h1>
-            <div class="my-4">
-                <a class="btn btn-secondary" href="{{ path('app_trip_new') }}">Ajouter</a>
+<div class="container my-4">
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <h1 class='text-center'>Liste des sorties</h1>
+                <a class="btn btn-primary" href="{{ path('app_trip_new') }}"><i class="bi bi-plus-lg"></i> Ajouter</a>
             </div>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Name</th>
-                        <th>DateHourStart</th>
-                        <th>Duration</th>
-                        <th>DateRegistrationLimit</th>
-                        <th>NumMaxRegistration</th>
-                        <th>TripDetails</th>
-                        <th>actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {% for trip in trips %}
-                    <tr>
-                        <td>{{ trip.id }}</td>
-                        <td>{{ trip.name }}</td>
-                        <td>{{ trip.dateHourStart ? trip.dateHourStart|date('d/m/Y H:i') : '' }}</td>
-                        <td>{{ trip.duration }}</td>
-                        <td>{{ trip.dateRegistrationLimit ? trip.dateRegistrationLimit|date('d/m/Y H:i') : '' }}</td>
-                        <td>{{ trip.numMaxRegistration }}</td>
-                        <td>{{ trip.tripDetails }}</td>
-                        <td>
-                            <a class="btn" href="{{ path('app_trip_show', {'id': trip.id}) }}"><i class="bi bi-eye"></i></a>
-                            <a class="btn" href="{{ path('app_trip_edit', {'id': trip.id}) }}"><i class="bi bi-pencil"></i></a>
-                        </td>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td colspan="8">no records found</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+
+            <div class="table-responsive">
+                <table class="table table-hover table-bordered">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>Id</th>
+                            <th>Name</th>
+                            <th>Date</th>
+                            <th>Duration (hours)</th>
+                            <th>Registration Limit</th>
+                            <th>Max Participants</th>
+                            <th>Details</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for trip in trips %}
+                        <tr>
+                            <td>{{ trip.id }}</td>
+                            <td>{{ trip.name }}</td>
+                            <td>{{ trip.dateHourStart ? trip.dateHourStart|date('d/m/Y H:i') : '' }}</td>
+                            <td>{{ trip.duration }}</td>
+                            <td>{{ trip.dateRegistrationLimit ? trip.dateRegistrationLimit|date('d/m/Y H:i') : '' }}</td>
+                            <td>{{ trip.numMaxRegistration }}</td>
+                            <td>{{ trip.tripDetails }}</td>
+                            <td>
+                                 <div class="d-flex justify-content-around align-items-center">
+                                 <div>
+                                     <a class="btn btn-outline-primary m-1" href="{{ path('app_trip_show', {'id': trip.id}) }}">
+                                        <i class="bi bi-eye"></i>
+                                    </a>
+                                 </div>
+                                   <div>
+                                    <a class="btn btn-outline-warning m-1" href="{{ path('app_trip_edit', {'id': trip.id}) }}">
+                                        <i class="bi bi-pencil"></i>
+                                    </a>
+                                   </div>
+                                   
+                                   {{ include('trip/_delete_form.html.twig') }}
+                                  
+                                   
+                                    
+                                </div>
+                            </td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td colspan="8" class="text-center">No records found</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
+
 
    
 {% endblock %}
