--- a/templates/trip/index.html.twig
+++ b/templates/trip/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Trip index{% endblock %}
+{% block title %}Sorties - Liste% endblock %}
 
 {% block body %}
  {% include "fragments/_nav.html.twig" %}
