--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -38,6 +38,7 @@
                     <th scope="col">ID</th>
                     <th scope="col">Prénom</th>
                     <th scope="col">Nom de famille</th>
+                    <th scope="col">Nom d'utilisateur</th>
                     <th scope="col">Email</th>
                     <th scope="col">Téléphone</th>
                     <th scope="col">Admin</th>
@@ -52,6 +53,7 @@
                         <td>{{ profile.id }}</td>
                         <td>{{ profile.firstname }}</td>
                         <td>{{ profile.lastname }}</td>
+                        <td>{{ profile.username }}</td>
                         <td>{{ profile.mail }}</td>
                         <td>{{ profile.phoneNumber }}</td>
                         <td>{{ profile.isAdmin ? 'Oui' : 'Non' }}</td>
@@ -71,6 +73,10 @@
                 {% endfor %}
             </tbody>
         </table>
+        <div class="text-center">
+         <a class="btn btn-outline-danger" id="deactivate-button">Désactiver</a>
+            <input type="hidden" name="_token" value="{{ csrf_token('deactivate_participants') }}">
+        </div>
     </div>
 </div>
 
