--- a/templates/city/index.html.twig
+++ b/templates/city/index.html.twig
@@ -15,35 +15,47 @@
     </div>
 
     <div class="container-fluid p-3">
-        <div class="row">
-            <div class="col-8 offset-2">
-                <div class="table-responsive">
-                    <table class="table table-hover table-bordered table-striped">
-                        <thead class="table-dark">
+    <div class="row">
+        <div class="col-8 offset-2">
+            <div class="mb-4">
+                {# Add a search bar form #}
+                <form method="GET" action="{{ path('app_city_index') }}" class="d-flex">
+                    <input type="text" name="search" class="form-control me-2" placeholder="Rechercher une ville par nom" value="{{ app.request.query.get('search') }}">
+                    <button class="btn btn-outline-secondary" type="submit">Rechercher</button>
+                </form>
+            </div>
+
+            <div class="table-responsive">
+                <table class="table table-hover table-bordered table-striped">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>#</th>
+                            <th>Nom de la ville</th>
+                            <th>Code postale</th>
+                        </tr>
+                    </thead>
+                    <tbody id="trips-tbody">
+                        {% for city in cities %}
                             <tr>
-                                <th>#</th>
-                                <th>Nom de la ville</th>
-                                <th>Code postale</th>
-{#                                <th>Action</th>#}
+                                <td>{{ city.id }}</td>
+                                <td>{{ city.name }}</td>
+                                <td>{{ city.zipCode }}</td>
                             </tr>
-                        </thead>
-                        <tbody id="trips-tbody">
-                            {% for city in cities %}
-                                <tr>
-                                    <td>{{ city.id }}</td>
-                                    <td>{{ city.name }}</td>
-                                    <td>{{ city.zipCode }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
+                        {% else %}
+                            <tr>
+                                <td colspan="3" class="text-center">Aucune ville trouvée</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
         </div>
-
-        <div class="text-center">
-            <a class="btn btn-primary" href="{{ path('app_city_new') }}">Ajouter</a>
-        </div>
     </div>
+
+    <div class="text-center">
+        <a class="btn btn-primary" href="{{ path('app_city_new') }}">Ajouter</a>
+    </div>
+</div>
+
 
 {% endblock %}
