--- a/templates/fragments/_nav.html.twig
+++ b/templates/fragments/_nav.html.twig
@@ -17,7 +17,7 @@
              {% if "ROLE_ADMIN" in app.user.roles %}
                 <li class="nav-item ">
 
-                <a class="nav-link {% if app.request.pathinfo is same as (path('app_city_index')) %} active {% endif %}" href="{{ path('app_city_index') }}"><i class="bi bi-person"></i>Gérer les villes</a>
+                <a class="nav-link {% if app.request.pathinfo is same as (path('app_city_index')) %} active {% endif %}" href="{{ path('app_city_index') }}"><i class="bi bi-person"></i>les villes</a>
                 </li>
                 <li class="nav-item ">
                 <a class="nav-link {% if app.request.pathinfo is same as (path('app_location_index')) %} active {% endif %}" href="{{path('app_location_index')}}"><i class="bi bi-person"></i> Sites</a>
