--- a/templates/fragments/_nav.html.twig
+++ b/templates/fragments/_nav.html.twig
@@ -1,53 +1,66 @@
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{{path('app_main_index')}}">
-      <img src="{{asset('images/logoSortir.png')}}" alt="Logo" width="60" class="d-inline-block align-text-center rounded">
-      Sortir.com
-    </a>
-      <!--  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button> --> 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent">
-                <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto align-items-center">
-            {% if is_granted ('IS_AUTHENTICATED_FULLY') %}   
-             {% if "ROLE_ADMIN" in app.user.roles %}
-                <li class="nav-item ">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="{{path('app_main_index')}}">
+			<img src="{{asset('images/logoSortir.png')}}" alt="Logo" width="60" class="d-inline-block align-text-center rounded">
+			Sortir.com
+		</a>
+		<!--  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+		        <span class="navbar-toggler-icon"></span>
+		        </button> -->
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse " id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto align-items-center">
+				{% if is_granted ('IS_AUTHENTICATED_FULLY') %}
+					{% if "ROLE_ADMIN" in app.user.roles %}
+						<li class="nav-item ">
 
-                <a class="nav-link {% if app.request.pathinfo is same as (path('app_city_index')) %} active {% endif %}" href="{{ path('app_city_index') }}"><i class="bi bi-person"></i>les villes</a>
-                </li>
-                <li class="nav-item ">
-                <a class="nav-link {% if app.request.pathinfo is same as (path('app_location_index')) %} active {% endif %}" href="{{path('app_location_index')}}"><i class="bi bi-person"></i> Sites</a>
-                </li>
-                 <li class="nav-item ">
-                <a class="nav-link {% if app.request.pathinfo is same as (path('app_profile_index')) %} active {% endif %}" href="{{path('app_profile_index')}}"><i class="bi bi-person"></i> Utilisateurs</a>
-                </li>
-                 <li class="nav-item ">
-                <a class="nav-link {% if app.request.pathinfo is same as (path('app_trip_index')) %} active {% endif %}" href="{{path('app_trip_index')}}"><i class="bi bi-person"></i> Sorties</a>
-                </li>
-              {% endif %}
-             {% endif %}      
-                <li class="nav-item">
-                <a class="nav-link {% if app.request.pathinfo is same as (path('app_main_index')) %} active {% endif %}" href="{{path('app_main_index')}}"><i class="bi bi-megaphone"></i> Accueil</a>
-                </li>
-              {% if is_granted ('IS_AUTHENTICATED_FULLY') %}    
-                <li class="nav-item">
-                <a class="nav-link {% if app.request.pathinfo is same as (path('app_profile_show',{'id': app.user.id})) %} active {% endif %}" href="{{path('app_profile_show',{'id': app.user.id} )}}"><i class="bi bi-list-check"></i> Mon Profil</a>
-                </li>
-                {% endif %}
-                </li>
-                 <li class="nav-item">
-                 {% if is_granted ('IS_AUTHENTICATED_FULLY') %}
-                        <a href="{{path('app_logout')}}"><button class="btn btn-secondary mx-2 my-sm-0" type="submit">Déconnexion</button></a>
-                    {% else %}
-                        <a href="{{path('app_login')}}"><button class="btn btn-secondary mx-2 my-sm-0" type="submit">Connexion</button></a>
-                    {% endif %} 
-                </li>
-            </ul>
-        
-        </div>
-    </div>
-    </nav> 
+							<a class="nav-link {% if app.request.pathinfo is same as (path('app_city_index')) %} active {% endif %}" href="{{ path('app_city_index') }}">
+								<i class="bi bi-person"></i>les villes</a>
+						</li>
+						<li class="nav-item ">
+							<a class="nav-link {% if app.request.pathinfo is same as (path('app_location_index')) %} active {% endif %}" href="{{path('app_location_index')}}">
+								<i class="bi bi-person"></i>
+								Sites</a>
+						</li>
+						<li class="nav-item ">
+							<a class="nav-link {% if app.request.pathinfo is same as (path('app_profile_index')) %} active {% endif %}" href="{{path('app_profile_index')}}">
+								<i class="bi bi-person"></i>
+								Utilisateurs</a>
+						</li>
+						<li class="nav-item ">
+							<a class="nav-link {% if app.request.pathinfo is same as (path('app_trip_index')) %} active {% endif %}" href="{{path('app_trip_index')}}">
+								<i class="bi bi-person"></i>
+								Sorties</a>
+						</li>
+					{% endif %}
+				{% endif %}
+				<li class="nav-item">
+					<a class="nav-link {% if app.request.pathinfo is same as (path('app_main_index')) %} active {% endif %}" href="{{path('app_main_index')}}">
+						<i class="bi bi-megaphone"></i>
+						Accueil</a>
+				</li>
+				{% if is_granted ('IS_AUTHENTICATED_FULLY') %}
+					<li class="nav-item">
+						<a class="nav-link {% if app.request.pathinfo is same as (path('app_profile_show',{'id': app.user.id})) %} active {% endif %}" href="{{path('app_profile_show',{'id': app.user.id} )}}">
+							<i class="bi bi-list-check"></i>
+							Mon Profil</a>
+					</li>
+				{% endif %}
+			</li>
+			<li class="nav-item">
+				{% if is_granted ('IS_AUTHENTICATED_FULLY') %}
+					<a href="{{path('app_logout')}}">
+						<button class="btn btn-secondary mx-2 my-sm-0" type="submit">Déconnexion</button>
+					</a>
+				{% else %}
+					<a href="{{path('app_login')}}">
+						<button class="btn btn-secondary mx-2 my-sm-0" type="submit">Connexion</button>
+					</a>
+				{% endif %}
+			</li>
+		</ul>
+
+	</div>
+</div></nav>
