--- a/templates/location/new.html.twig
+++ b/templates/location/new.html.twig
@@ -2,14 +2,24 @@
 {% block stylesheets %}
   <link rel="stylesheet" href="{{asset('css/location-form.css')}}">
         {% endblock %}
-{% block title %}New Location{% endblock %}
+{% block title %}Lieu - Créer{% endblock %}
 
 {% block body %}
  {% include "fragments/_nav.html.twig" %}
     <h1 class="text-center">Création du lieu</h1>
     {% include "fragments/_flash_message.html.twig" %} 
-     
-    {{ include('location/_form.html.twig', {'button_label': 'Enregistrer'})  }}
+
+    {% if is_granted ('ROLE_ADMIN') %}
+        {{ include('location/_form.html.twig', {'button_label': 'Enregistrer'})  }}
+    {% else%}
+        {{ include('location/_form_with_city.html.twig', {'button_label': 'Enregistrer'})  }}
+    {% endif %}
 
     <div><a href="{{ path('app_location_index') }}" class="btn btn-outline-primary"><i class="bi bi-arrow-return-left"></i></a></div>
+
+    {% block javascripts %}
+        {% if "ROLE_ADMIN" not in app.user.roles %}
+            <script src="{{asset('js/cityCreation.js')}}"></script>
+        {% endif %}
+    {% endblock %}
 {% endblock %}
