--- a/templates/trip/_form.html.twig
+++ b/templates/trip/_form.html.twig
@@ -11,7 +11,12 @@
         </div>
         <div class="col">
             {{ form_row(formTrip.base) }}
-            {{ form_row(formTrip.location) }}
+            <div class="row">
+                {{ form_row(formTrip.location) }}
+                <div class="col text-center">
+                    <a href="{{ path('app_location_new') }}" class="btn btn-primary"><i class="bi bi-plus-circle"></i></a>
+                </div>
+            </div>
 
            {# City name input (always visible) #}
             <label class="form-label mt-4" for="city_name">Ville</label>
